[[example]]
name = "basic"
path = "examples/basic.rs"

[package]
name = "gpu-raytracing-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.15.1"
winit = "0.28.1"
bytemuck = { version = "1.13", features = ["derive"] }
futures = "0.3.26"

log = "0.4.17"
simple_logger = "4.0.0"

num_cpus = "1.15.0"
cgmath = "0.18.0"